Fix vae/models in safetensors

--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -62,8 +62,11 @@
         "import toml\n",
         "import pathlib\n",
         "import threading\n",
+        "import time\n",
         "from time import time\n",
         "from IPython.display import Markdown, display\n",
+        "from huggingface_hub.utils import disable_progress_bars\n",
+        "import logging\n",
         "\n",
         "#@markdown ### 💤 Auto Off\n",
         "\n",
@@ -76,16 +79,14 @@
         "\n",
         "\n",
         "# These carry information from past executions\n",
-        "if \"old_model_url\" not in globals():\n",
+        "if \"model_url\" in globals():\n",
+        "  old_model_url = model_url\n",
+        "else:\n",
         "  old_model_url = None\n",
         "if \"dependencies_installed\" not in globals():\n",
         "  dependencies_installed = False\n",
         "if \"model_file\" not in globals():\n",
         "  model_file = None\n",
-        "if \"model_cached\" not in globals():\n",
-        "  model_cached = False\n",
-        "if \"diffusers_model\" not in globals():\n",
-        "  diffusers_model = None\n",
         "\n",
         "# These may be set by other cells, some are legacy\n",
         "if \"custom_dataset\" not in globals():\n",
@@ -126,41 +127,74 @@
         "#@markdown Habilitar vprediction para modelos compatibles\n",
         "vpred = False #@param {type:\"boolean\"}\n",
         "#@markdown Civitai API token para modelos que requieren autorización.\n",
-        "civitoken = \"\" #@param {type:\"string\"}\n",
         "#@markdown Usa wandb si quieres visualizar el progreso de tu entrenamiento a el paso del tiempo.\n",
         "wandb_key = \"\" #@param {type:\"string\"}\n",
-        "model_url = None\n",
         "if optional_custom_training_model:\n",
         "  model_url = optional_custom_training_model\n",
-        "  model_url = model_url.strip()\n",
-        "  model_file = \"/content/custom_model.safetensors\"\n",
         "elif \"Pony\" in training_model:\n",
-        "  diffusers_model = \"WhiteAiZ/Pony_diffusion_v6_diffusers_fp16\"\n",
+        "  if load_diffusers:\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/Pony_diffusion_v6_diffusers_fp16\"\n",
+        "  else:\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/PonyXL/resolve/main/PonyDiffusionV6XL.safetensors\"\n",
+        "  model_file = \"/content/ponyDiffusionV6XL.safetensors\"\n",
         "elif \"Animagine\" in training_model:\n",
-        "  idiffusers_model = \"cagliostrolab/animagine-xl-3.0\"\n",
+        "  if load_diffusers:\n",
+        "    model_url = \"https://huggingface.co/cagliostrolab/animagine-xl-3.0\"\n",
+        "  else:\n",
+        "    model_url = \"https://civitai.com/api/download/models/293564\"\n",
+        "  model_file = \"/content/animagineXLV3.safetensors\"\n",
         "elif \"animagine_4.0_zero\" in training_model:\n",
-        "  diffusers_model = \"cagliostrolab/animagine-xl-4.0-zero\"\n",
+        "  if load_diffusers:\n",
+        "    model_url = \"https://huggingface.co/cagliostrolab/animagine-xl-4.0-zero\"\n",
+        "  else:\n",
+        "    model_url = \"https://huggingface.co/cagliostrolab/animagine-xl-4.0-zero/resolve/main/animagine-xl-4.0-zero.safetensors\"\n",
+        "  model_file = \"/content/animagine-xl-4.0-zero.safetensors\"\n",
         "elif \"Illustrious_0.1\" in training_model:\n",
-        "  diffusers_model = \"OnomaAIResearch/Illustrious-xl-early-release-v0\"\n",
+        "  if load_diffusers:\n",
+        "    model_url = \"https://huggingface.co/OnomaAIResearch/Illustrious-xl-early-release-v0\"\n",
+        "  else:\n",
+        "    model_url = \"https://huggingface.co/OnomaAIResearch/Illustrious-xl-early-release-v0/resolve/main/Illustrious-XL-v0.1.safetensors\"\n",
         "elif \"Illustrious_2.0\" in training_model:\n",
-        "  diffusers_model = \"WhiteAiZ/Illustrious_2.0\"\n",
+        "  if load_diffusers:\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/Illustrious_2.0\"\n",
+        "  else:\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/Illustrious_2.0/resolve/main/illustriousXL20_v20.safetensors\"\n",
+        "  model_file = \"/content/illustriousXL20_v20.safetensors\"\n",
         "elif \"NoobAI-XL0.75\" in training_model:\n",
-        "  diffusers_model = \"Laxhar/noobai-XL-0.75\"\n",
+        "  if load_diffusers:\n",
+        "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.75\"\n",
+        "  else:\n",
+        "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.75/resolve/main/NoobAI-XL-v0.75.safetensors\"\n",
         "elif \"NoobAI-XL0.5\" in training_model:\n",
-        "  diffusers_model = \"Laxhar/noobai-XL-0.5\"\n",
+        "  if load_diffusers:\n",
+        "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.5\"\n",
+        "  else:\n",
+        "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.5/resolve/main/NoobAI-XL-v0.5.safetensors\"\n",
         "elif \"Stable Diffusion XL 1.0 base\" in training_model:\n",
         "  if load_diffusers:\n",
-        "    diffusers_model = \"stabilityai/stable-diffusion-xl-base-1.0\"\n",
+        "    model_url = \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/\"\n",
+        "  else:\n",
+        "    model_url = \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_base_1.0.safetensors\"\n",
         "elif \"NoobAIXL0_75vpred\" in training_model:\n",
         "  vpred = True\n",
-        "  diffusers_model = \"Laxhar/noobai-XL-Vpred-0.75\"\n",
+        "  if load_diffusers:\n",
+        "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-Vpred-0.75\"\n",
+        "  else:\n",
+        "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-Vpred-0.75/resolve/main/NoobAI-XL-Vpred-v0.75.safetensors\"\n",
+        "  model_file = \"/content/NoobAI-XL-Vpred-v0.75.safetensors\"\n",
         "else:\n",
         "  vpred = True\n",
         "  if load_diffusers:\n",
-        "    diffusers_model = \"John6666/rouwei-v080-vpred-sdxl\"\n",
+        "    model_url = \"https://huggingface.co/John6666/rouwei-v080-vpred-sdxl\"\n",
+        "  else:\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/RouWei/resolve/main/rouwei_v080Vpred.safetensors\"\n",
+        "  model_file = \"/content/rouwei_v080Vpred.safetensors\"\n",
         "\n",
         "if load_diffusers:\n",
         "  vae_file= \"stabilityai/sdxl-vae\"\n",
+        "else:\n",
+        "  vae_url = \"https://huggingface.co/stabilityai/sdxl-vae/resolve/main/sdxl_vae.safetensors\"\n",
+        "  vae_file = \"/content/sdxl_vae.safetensors\"\n",
         "\n",
         "#@markdown ### ▶️ Procesamiento\n",
         "#@markdown Por defecto la resolución para personajes es 1024. otras resoluciones que puedes usar son 896 (recomendado para personajes o 1024) y 768 (recomendado para estilos, puedes usar más repeticiones con esta resolución).\n",
@@ -305,9 +339,8 @@
         "accelerate_config_file = os.path.join(repo_dir, \"accelerate_config/config.yaml\")\n",
         "\n",
         "def install_dependencies():\n",
-        "  if 'installed' not in globals():\n",
-        "    !wget --show-progress -q https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
-        "    installed = True\n",
+        "  !wget --show-progress -q https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
+        "  installed = True\n",
         "  print(\"Instalando entrenador\")\n",
         "  os.chdir(root_dir)\n",
         "  !git clone {SOURCE} {repo_dir}\n",
@@ -330,7 +363,7 @@
         "    # toml==0.10.2 safetensors pygments wandb imagesize==1.4.1 #debug\n",
         "  !uv pip install -e . --no-progress\n",
         "  if cross_attention == \"xformers\":\n",
-        "    !uv pip install -q xformers==0.0.29.post3 --no-progress\n",
+        "    !uv pip install xformers --no-progress\n",
         "\n",
         "  # patch kohya for minor stuff\n",
         "  if LOWRAM:\n",
@@ -499,9 +532,6 @@
         "        \"logging_dir\": log_folder,\n",
         "        \"wandb_api_key\": wandb_key if wandb_key else None,\n",
         "        \"log_with\": \"wandb\" if wandb_key else None,\n",
-        "        \"sample_prompts\": prompt_file if sample_prompt else None,\n",
-        "        \"sample_every_n_epochs\": save_every_n_epochs if sample_prompt else None,\n",
-        "        \"sample_sampler\": \"euler_a\" if sample_prompt else None,\n",
         "      }\n",
         "    }\n",
         "\n",
@@ -553,20 +583,50 @@
         "    print(f\"📄 Dataset config saved to {dataset_config_file}\")\n",
         "\n",
         "def download_model():\n",
-        "  global old_model_url, model_url, model_file\n",
-        "  real_model_url = model_url  # Keep model url intact to compare against old model url to detect a change.\n",
+        "  global old_model_url, model_url, model_file, vae_url, vae_file\n",
+        "  real_model_url = model_url  # There was a reason for having a separate variable but I forgot what it was.\n",
         "\n",
-        "  # Test for google drive model\n",
         "  if real_model_url.startswith(\"/content/drive/\"):\n",
+        "    # Local model, already checked to exist\n",
         "    model_file = real_model_url\n",
-        "    if model_file.lower().endswith(\".safetensors\") or model_file.lower().endswith(\".ckpt\"):\n",
-        "      print(f\"\\nTraing will be done with drive model at {model_file}, check it is valid if you recieve errors\\n\")\n",
-        "      return True\n",
-        "    return False\n",
+        "    print(f\"📁 Using local model file: {model_file}\")\n",
+        "    # Validation\n",
+        "    if model_file.lower().endswith(\".safetensors\"):\n",
+        "      from safetensors.torch import load_file as load_safetensors\n",
+        "      try:\n",
+        "        test = load_safetensors(model_file)\n",
+        "        del test\n",
+        "      except:\n",
+        "        return False\n",
+        "    elif model_file.lower().endswith(\".ckpt\"):\n",
+        "      from torch import load as load_ckpt\n",
+        "      try:\n",
+        "        test = load_ckpt(model_file)\n",
+        "        del test\n",
+        "      except:\n",
+        "        return False\n",
+        "    return True\n",
         "\n",
         "  else:\n",
+        "    # Downloadable model\n",
+        "    if load_diffusers:\n",
+        "      if 'huggingface.co' in real_model_url:\n",
+        "          match = re.search(r'huggingface\\.co/([^/]+)/([^/]+)', real_model_url)\n",
+        "          if match:\n",
+        "              username = match.group(1)\n",
+        "              model_name = match.group(2)\n",
+        "              model_file = f\"{username}/{model_name}\"\n",
+        "              from huggingface_hub import HfFileSystem\n",
+        "              fs = HfFileSystem()\n",
+        "              existing_folders = set(fs.ls(model_file, detail=False))\n",
+        "              necessary_folders = [ \"scheduler\", \"text_encoder\", \"text_encoder_2\", \"tokenizer\", \"tokenizer_2\", \"unet\", \"vae\" ]\n",
+        "              if all(f\"{model_file}/{folder}\" in existing_folders for folder in necessary_folders):\n",
+        "                print(\"🍃 Diffusers model identified.\")  # Will be handled by kohya\n",
+        "                return True\n",
+        "      raise ValueError(\"💥 Failed to load Diffusers model. If this model is not Diffusers, have you tried turning it off at the top of the colab?\")\n",
+        "\n",
         "    # Define local filename\n",
-        "    if not model_file or not model_file.endswith((\".ckpt\", \".safetensors\")):\n",
+        "    if not model_file:\n",
         "      if real_model_url.lower().endswith((\".ckpt\", \".safetensors\")):\n",
         "        model_file = f\"/content{real_model_url[real_model_url.rfind('/'):]}\"\n",
         "      else:\n",
@@ -585,10 +645,13 @@
         "        real_model_url = f\"https://civitai.com/api/download/models/{m.group(1)}\"\n",
         "      else:\n",
         "        raise ValueError(\"💥 optional_custom_training_model contains a civitai link, but the link doesn't include a modelVersionId. You can also right click the download button to copy the direct download link.\")\n",
-        "      if civitoken:\n",
-        "        real_model_url = real_model_url+\"?token=\"+civitoken\n",
+        "\n",
         "    # Download checkpoint\n",
         "    !aria2c \"{real_model_url}\" --console-log-level=warn -c -s 16 -x 16 -k 10M -d / -o \"{model_file}\"\n",
+        "\n",
+        "    # Download VAE\n",
+        "    if not os.path.exists(vae_file):\n",
+        "      !aria2c \"{vae_url}\" --console-log-level=warn -c -s 16 -x 16 -k 10M -d / -o \"{vae_file}\"\n",
         "\n",
         "    # Validation\n",
         "\n",
@@ -613,29 +676,31 @@
         "\n",
         "  return True\n",
         "\n",
-        "def getModel():\n",
-        "  global diffusers_model, model_url, model_file, old_model_url\n",
-        "  !uv pip install transformers==4.47.1 #diffusers==0.32.2 jax==0.4.33 jaxlib==0.4.33 huggingface_hub==0.27.1 flax==0.10.2\n",
-        "  from huggingface_hub import snapshot_download\n",
-        "  from huggingface_hub.utils import disable_progress_bars\n",
-        "  disable_progress_bars() # Disable model download progress bars to clean up output from threading mess\n",
-        "  snapshot_download(repo_id=vae_file, allow_patterns=[\"*model.safetensors\", \"*.json\"]) # Download Vae\n",
-        "  if force_dif:\n",
-        "    if optional_custom_training_model and 'huggingface.co' in model_url: # Strip url into repo id\n",
-        "          match = re.search(r'huggingface\\.co/([^/]+)/([^/]+)', model_url)\n",
-        "          if match:\n",
-        "              username = match.group(1)\n",
-        "              model_name = match.group(2)\n",
-        "              diffusers_model = f\"{username}/{model_name}\"\n",
-        "    elif optional_custom_training_model: # Already in repo id format\n",
-        "      diffusers_model = model_url\n",
-        "    model_file = diffusers_model\n",
-        "    try:\n",
-        "      print(\"\\n🔄 Getting Diffuser model...\")\n",
-        "      snapshot_download(repo_id=diffusers_model, allow_patterns=[\"*model.safetensors\", \"*.json\", \"*.txt\"]) # Much faster but runs into chance of downloading unnecessary files, slowing it down in rare cases.\n",
-        "    except:\n",
-        "      raise ValueError(f\"\\nInvalid Diffuser Model {diffusers_model}\")\n",
-        "  elif old_model_url != model_url or not model_file or not os.path.exists(model_file):\n",
+        "def main():\n",
+        "  global dependencies_installed\n",
+        "\n",
+        "  if COLAB and not os.path.exists('/content/drive'):\n",
+        "    from google.colab import drive\n",
+        "    print(\"📂 Connecting to Google Drive...\")\n",
+        "    drive.mount('/content/drive')\n",
+        "\n",
+        "  for dir in (main_dir, deps_dir, repo_dir, log_folder, images_folder, output_folder, config_folder):\n",
+        "    os.makedirs(dir, exist_ok=True)\n",
+        "\n",
+        "  if not validate_dataset():\n",
+        "    return\n",
+        "\n",
+        "  if not dependencies_installed:\n",
+        "    print(\"\\n🏭 Installing dependencies...\\n\")\n",
+        "    t0 = time()\n",
+        "    install_dependencies()\n",
+        "    t1 = time()\n",
+        "    dependencies_installed = True\n",
+        "    print(f\"\\n✅ Installation finished in {int(t1-t0)} seconds.\")\n",
+        "  else:\n",
+        "    print(\"\\n✅ Dependencies already installed.\")\n",
+        "\n",
+        "  if old_model_url != model_url or not model_file or not os.path.exists(model_file):\n",
         "    print(\"\\n🔄 Getting model...\")\n",
         "    if not download_model():\n",
         "      print(\"\\n💥 Error: The model you specified is invalid or corrupted.\"\n",
@@ -645,60 +710,7 @@
         "    print()\n",
         "  else:\n",
         "    print(\"\\n🔄 Model already downloaded.\\n\")\n",
-        "  old_model_url = model_url # only update old model url if we successfully downloaded it to prevent not downloading model if it previously failed on a change.\n",
         "\n",
-        "def generateSample(): # Generate required files for sample generation\n",
-        "  global output_folder, sample_prompt, prompt_file\n",
-        "  if sample_prompt:\n",
-        "    prompt_file = os.path.abspath(os.path.join(output_folder, \"sample\"))\n",
-        "    if not os.path.exists(prompt_file): # Make sample directory so prompt file creation does not fail.\n",
-        "      os.mkdir(prompt_file)\n",
-        "    prompt_file = os.path.join(prompt_file, \"prompt.txt\")\n",
-        "    with open(prompt_file, \"w\") as f:\n",
-        "      f.write(sample_prompt)\n",
-        "\n",
-        "def thInstallDep():\n",
-        "  global dependencies_installed\n",
-        "  print(\"\\n🏭 Installing dependencies...\\n\")\n",
-        "  t0 = time()\n",
-        "  install_dependencies()\n",
-        "  t1 = time()\n",
-        "  dependencies_installed = True\n",
-        "  print(f\"\\n✅ Installation finished in {int(t1-t0)} seconds. \\nWaiting on Model...\\n\")\n",
-        "\n",
-        "def main():\n",
-        "  global dependencies_installed, sample_prompt\n",
-        "\n",
-        "  if COLAB and not os.path.exists('/content/drive'):\n",
-        "    from google.colab import drive\n",
-        "    print(\"📂 Connecting to Google Drive...\")\n",
-        "    drive.mount('/content/drive')\n",
-        "\n",
-        "  threadList = []\n",
-        "  # Download model with a thread\n",
-        "  thr1 = threading.Thread(target = getModel)\n",
-        "  threadList.append(thr1)\n",
-        "  thr1.start()\n",
-        "\n",
-        "  if not dependencies_installed: # Begin installing dependencies while user gives gdrive permissions\n",
-        "    thr2 = threading.Thread(target = thInstallDep)\n",
-        "    threadList.append(thr2)\n",
-        "    thr2.start()\n",
-        "  else:\n",
-        "    print(\"\\n✅ Dependencies already installed.\")\n",
-        "\n",
-        "\n",
-        "  for th in threadList: # Make sure model and or set are done before continuing\n",
-        "    th.join()\n",
-        "\n",
-        "\n",
-        "  for dir in (main_dir, deps_dir, repo_dir, log_folder, images_folder, output_folder, config_folder):\n",
-        "    os.makedirs(dir, exist_ok=True)\n",
-        "\n",
-        "  if not validate_dataset():\n",
-        "    return\n",
-        "\n",
-        "  generateSample() # Make sure sample file exists prior to creating config file\n",
         "  create_config()\n",
         "\n",
         "  print(\"\\n⭐ Starting trainer...\\n\")\n",
@@ -716,6 +728,7 @@
         "if auto_off:\n",
         "    print(\"\\033[96mAuto Off encendido, el entorno se desconectara en 30 segundos\\033[0m\")\n",
         "    from google.colab import runtime\n",
+        "    import time\n",
         "    time.sleep(30)\n",
         "    runtime.unassign()\n",
         "else:\n",
