reduce diffuser model log

--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -302,14 +302,6 @@
         "lr_scheduler_num_cycles = lr_scheduler_number if lr_scheduler == \"cosine_with_restarts\" else 0\n",
         "lr_scheduler_power = lr_scheduler_number if lr_scheduler == \"polynomial\" else 0\n",
         "\n",
-        "#@markdown ### ▶️ Generar imagen de muestra (Opcional)\n",
-        "#@markdown Esto permite supervisar el entrenamiento.<p>\n",
-        "#@markdown Genera una imagen de muestra con la Lora después de cada época guardada usando el siguiente prompt:<p>\n",
-        "#@markdown Las imágenes se guardarán en `GDrive/Loras/project_name/output/samples`<p>\n",
-        "#@markdown Agrega opciones de generación opcionales al final usando `--w {width} --h {height} --d {seed} --s {steps} --l {cfg}`<p>\n",
-        "#@markdown Prompt de ejemplo: `1girl, blonde hair, smiling --w 1024 --h 1024 --d 173371316 --s 20 --l 5`<p>\n",
-        "#@markdown Esta opcion usa más VRAM al generar la imagen. El entrenamiento se puede alentar después de generar una imagen, debido a que se mueven cosas de afuera la VRAM. No se use si deseas maximizar el tiempo de entrenamiento.\n",
-        "sample_prompt = \"\" #@param {type:\"string\"}\n",
         "\n",
         "#@markdown ### ▶️ Listo\n",
         "#@markdown Ahora puedes correr esta celda apretando el botón circular a la izquierda. ¡Buena suerte! <p>\n",
@@ -609,6 +601,16 @@
         "\n",
         "  else:\n",
         "    # Downloadable model\n",
+        "\n",
+        "    # log minimo\n",
+        "    logging.getLogger(\"huggingface_hub\").setLevel(logging.ERROR)\n",
+        "    logging.getLogger(\"fsspec\").setLevel(logging.ERROR)\n",
+        "\n",
+        "    #Desactiva las barras de progreso\n",
+        "    os.environ[\"HF_HUB_DISABLE_PROGRESS_BARS\"] = \"1\"\n",
+        "    disable_progress_bars()\n",
+        "\n",
+        "\n",
         "    if load_diffusers:\n",
         "      if 'huggingface.co' in real_model_url:\n",
         "          match = re.search(r'huggingface\\.co/([^/]+)/([^/]+)', real_model_url)\n",
