--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -121,12 +121,11 @@
         "#@markdown Decide el modelo base que se descargará y utilizará para la entrenar. También puedes elegir uno propio pegando su enlace de descarga, o uno en tu Google Drive que comience con /`content/drive/MyDrive`.\n",
         "training_model = \"Illustrious_2.0\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"NoobAIXL0_75vpred\",\"RouWei_v080vpred\"]\n",
         "optional_custom_training_model = \"\" #@param {type:\"string\"}\n",
-        "#@markdown El uso de un modelo en diffusers utiliza menos recursos. obligatorio en colab gratis.\n",
+        "#@markdown El uso de un modelo en diffusers utiliza menos recursos. si decides usar un modelo en `.safetensors` selecciona en **mixed_precision:** `full_fp16`\n",
         "load_diffusers = True #@param {type:\"boolean\"}\n",
         "force_dif = False if optional_custom_training_model and not load_diffusers else True # Built in models will force use diffuser versions as they handle caching between swapping models\n",
         "#@markdown Habilitar vprediction para modelos compatibles\n",
         "vpred = False #@param {type:\"boolean\"}\n",
-        "#@markdown Civitai API token para modelos que requieren autorización.\n",
         "#@markdown Usa wandb si quieres visualizar el progreso de tu entrenamiento a el paso del tiempo.\n",
         "wandb_key = \"\" #@param {type:\"string\"}\n",
         "if optional_custom_training_model:\n",
@@ -270,9 +269,9 @@
         "#@markdown\n",
         "#@markdown Un tamaño de lote `train_batch_size` mayor suele ser más rápido, pero utiliza más memoria.\n",
         "train_batch_size = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
-        "#markdown No hay una diferencia sustancial entre sdpa y xformers.\n",
-        "cross_attention = \"sdpa\" #param [\"sdpa\", \"xformers\"]\n",
-        "#@markdown Si estás usando una A100, deberias usar bf16. Si se está quedando sin memoria en los recursos gratuitos con un modelo sin formato diffusers, prueba con `full_fp16`.\n",
+        "#@markdown No hay una diferencia sustancial entre sdpa y xformers.\n",
+        "cross_attention = \"xformers\" #@param [\"sdpa\", \"xformers\"]\n",
+        "#@markdown Si estás usando una A100, deberias usar bf16. Si no estas usando un modelo en formato diffusers usa `full_fp16`.\n",
         "mixed_precision = \"fp16\" #@param [\"bf16\", \"fp16\", \"full_fp16\"]\n",
         "#@markdown `cache_latents_to_drive` agregará un archivo de 250 KB junto a cada imagen, pero utilizará considerablemente menos memoria.\n",
         "cache_latents = True #@param {type:\"boolean\"}\n",
