Add Came + Rex optimizer, change sd-scrips repository

--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -99,7 +99,7 @@
         "  override_config_file = None\n",
         "\n",
         "COLAB = True\n",
-        "SOURCE = \"https://github.com/uYouUs/sd-scripts\"\n",
+        "SOURCE = \"https://github.com/gwhitez/sd-scripts_colab\"\n",
         "BRANCH = None\n",
         "COMMIT = None\n",
         "BETTER_EPOCH_NAMES = True\n",
@@ -229,7 +229,7 @@
         "unet_lr = 3e-4 #@param {type:\"number\"}\n",
         "text_encoder_lr = 6e-5 #@param {type:\"number\"}\n",
         "#@markdown El scheduler es el algoritmo matemático que guiará el entrenamiento. Para personajes recomiendo `cosin_whit_restarts` con un valor de 3. Si no estás seguro ponlo en `constant` e ignora el valor.\n",
-        "lr_scheduler = \"cosine_with_restarts\" #@param [\"constant\", \"cosine\", \"cosine_with_restarts\", \"constant_with_warmup\", \"linear\", \"polynomial\"]\n",
+        "lr_scheduler = \"cosine_with_restarts\" # @param [\"constant\",\"cosine\",\"cosine_with_restarts\",\"constant_with_warmup\",\"linear\",\"polynomial\",\"rex\"]\n",
         "lr_scheduler_number = 3 #@param {type:\"number\"}\n",
         "#@markdown Pasos de \"calentamiento\" durante el entrenamiento para un inicio eficiente. Recomiendo dejarlo en 5%.\n",
         "lr_warmup_ratio = 0.05 #@param {type:\"slider\", min:0.0, max:0.2, step:0.01}\n",
@@ -282,10 +282,11 @@
         "#@markdown ### ▶️ Avanzado (Opcional)\n",
         "#@markdown El optimizador es el algoritmo utilizado para el entrenamiento. `AdamW8bit` es el predeterminado y funciona muy bien, mientras que `Prodigy` administra la tasa de aprendizaje automáticamente y puede tener varias ventajas, como entrenar más rápido debido a que necesita menos pasos, así como trabajar mejor para conjuntos de datos pequeños.\n",
         "#@markdown para entrenamiento de `PonyV6` recomiendo usar `Adafactor`. Mientras que `Illustrious` Funciona mejor con `AdamW8bit`\n",
-        "optimizer = \"AdamW8bit\" #@param [\"AdamW8bit\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\"]\n",
+        "optimizer = \"AdamW8bit\" # @param [\"AdamW8bit\",\"Prodigy\",\"DAdaptation\",\"DadaptAdam\",\"DadaptLion\",\"AdamW\",\"Lion\",\"SGDNesterov\",\"SGDNesterov8bit\",\"AdaFactor\",\"came\"]\n",
         "#@markdown Argumentos recomendados para AdamW8bit: `weight_decay=0.1 betas=[0.9,0.99]`<p>\n",
         "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=2 use_bias_correction=True safeguard_warmup=True`<p>\n",
-        "#@markdown Argumentos recomendados para Adafactor: `scale_parameter=False relative_step=False warmup_init=False`\n",
+        "#@markdown Argumentos recomendados para Adafactor: `scale_parameter=False relative_step=False warmup_init=False` <p>\n",
+        "#@markdown Argumentos recomendado para CAME: `weight_decay=0.04`\n",
         "optimizer_args = \"weight_decay=0.1 betas=[0.9,0.99]\" #@param {type:\"string\"}\n",
         "optimizer_args = [a.strip() for a in optimizer_args.split(' ') if a]\n",
         "#@markdown Si se selecciona Dadapt o Prodigy y se marca la casilla de abajo, los siguientes valores recomendados reemplazaran la configuración anterior:<p>\n",
@@ -301,6 +302,25 @@
         "lr_scheduler_num_cycles = lr_scheduler_number if lr_scheduler == \"cosine_with_restarts\" else 0\n",
         "lr_scheduler_power = lr_scheduler_number if lr_scheduler == \"polynomial\" else 0\n",
         "\n",
+        "if optimizer == \"came\":\n",
+        "  optimizer = \"CAME\"\n",
+        "\n",
+        "lr_scheduler_type = None\n",
+        "lr_scheduler_args = None\n",
+        "lr_scheduler_num_cycles = lr_scheduler_number\n",
+        "lr_scheduler_power = lr_scheduler_number\n",
+        "\n",
+        "if \"rex\" in lr_scheduler:\n",
+        "  lr_scheduler = \"cosine\"\n",
+        "  lr_scheduler_type = \"rex\"\n",
+        "  lr_scheduler_args = [\"min_lr=1e-9\", \"gamma=0.9\", \"d=0.9\"]\n",
+        "\n",
+        "# Misc\n",
+        "seed = 42\n",
+        "gradient_accumulation_steps = 1\n",
+        "bucket_reso_steps = 64\n",
+        "min_bucket_reso = 256\n",
+        "max_bucket_reso = 4096\n",
         "\n",
         "#@markdown ### ▶️ Listo\n",
         "#@markdown Ahora puedes correr esta celda apretando el botón circular a la izquierda. ¡Buena suerte! <p>\n",
@@ -347,14 +367,15 @@
         "  !apt -y install aria2 -qq\n",
         "\n",
         "  !pip install uv\n",
-        "  #!pip install accelerate==1.2.1 opencv-python==4.10.0.84 einops==0.8.0 \\ #debug, slows down startup if active\n",
-        "  !uv pip install bitsandbytes==0.45.1 pytorch-lightning==1.9.0 voluptuous==0.13.1 \\\n",
-        "    invisible-watermark==0.2.0 prodigyopt==1.0.0 lycoris-lora \\\n",
-        "    dadaptation==3.1 lion-pytorch==0.1.2 ftfy==6.1.1 --no-progress\n",
-        "    # toml==0.10.2 safetensors pygments wandb imagesize==1.4.1 #debug\n",
+        "  !uv pip install accelerate==1.2.1 opencv-python==4.10.0.84 einops==0.8.0\n",
+        "  !uv pip install bitsandbytes==0.45.1 pytorch-lightning==1.9.0 voluptuous==0.13.1\n",
+        "  !uv pip install invisible-watermark==0.2.0 prodigyopt==1.0.0 lycoris-lora\n",
+        "  !uv pip install dadaptation==3.1 lion-pytorch==0.1.2 ftfy==6.1.1\n",
+        "  !uv pip install toml==0.10.2 safetensors pygments wandb imagesize==1.4.1 pytorch-rex came-pytorch\n",
         "  !uv pip install -e . --no-progress\n",
         "  if cross_attention == \"xformers\":\n",
         "    !uv pip install xformers --no-progress\n",
+        "\n",
         "\n",
         "  # patch kohya for minor stuff\n",
         "  if LOWRAM:\n",
@@ -486,7 +507,7 @@
         "        \"max_train_steps\": max_train_steps,\n",
         "        \"max_train_epochs\": max_train_epochs,\n",
         "        \"train_batch_size\": train_batch_size,\n",
-        "        \"seed\": 42,\n",
+        "        \"seed\": seed,\n",
         "        \"max_token_length\": 225,\n",
         "        \"xformers\": cross_attention == \"xformers\",\n",
         "        \"sdpa\": cross_attention == \"sdpa\",\n",
@@ -494,7 +515,7 @@
         "        \"lowram\": LOWRAM,\n",
         "        \"no_half_vae\": True,\n",
         "        \"gradient_checkpointing\": True,\n",
-        "        \"gradient_accumulation_steps\": 1,\n",
+        "        \"gradient_accumulation_steps\": gradient_accumulation_steps,\n",
         "        \"max_data_loader_n_workers\": 3,\n",
         "        \"persistent_data_loader_workers\": True,\n",
         "        \"mixed_precision\": \"fp16\" if mixed_precision == \"full_fp16\" else mixed_precision,\n",
@@ -547,9 +568,9 @@
         "        \"caption_extension\": caption_extension,\n",
         "        \"enable_bucket\": True,\n",
         "        \"bucket_no_upscale\": False,\n",
-        "        \"bucket_reso_steps\": 64,\n",
-        "        \"min_bucket_reso\": 256,\n",
-        "        \"max_bucket_reso\": 4096,\n",
+        "        \"bucket_reso_steps\": bucket_reso_steps,\n",
+        "        \"min_bucket_reso\": min_bucket_reso,\n",
+        "        \"max_bucket_reso\": max_bucket_reso,\n",
         "      },\n",
         "      \"datasets\": toml.loads(custom_dataset)[\"datasets\"] if custom_dataset else [\n",
         "        {\n",
@@ -677,6 +698,80 @@
         "\n",
         "  return True\n",
         "\n",
+        "def calculate_rex_steps():\n",
+        "  # Reemplazo de BucketManager por implementación local (no usa library.train_util)\n",
+        "  global max_train_steps\n",
+        "  print(\"\\n🤔 Calculating Rex steps\")\n",
+        "  if max_train_steps:\n",
+        "    calculated_max_steps = max_train_steps\n",
+        "  else:\n",
+        "    from PIL import Image\n",
+        "    from pathlib import Path\n",
+        "    import math\n",
+        "    import toml\n",
+        "\n",
+        "    # Leer configuración de datasets\n",
+        "    with open(dataset_config_file, \"r\") as f:\n",
+        "      subsets = toml.load(f)[\"datasets\"][0][\"subsets\"]\n",
+        "\n",
+        "    supported_types = {\".png\", \".jpg\", \".jpeg\", \".webp\", \".bmp\"}\n",
+        "\n",
+        "    # Construir lista de resoluciones de bucket (cuadradas) e índices\n",
+        "    # Ejemplo: min=256, max=1024, step=128 => [256,384,512,...,1024]\n",
+        "    bucket_resos = list(range(min_bucket_reso, max_bucket_reso + 1, bucket_reso_steps))\n",
+        "    if not bucket_resos:\n",
+        "      raise ValueError(\"Rango de buckets inválido\")\n",
+        "\n",
+        "    # Estructura: map de bucket_reso -> list of image paths (contando repeticiones)\n",
+        "    buckets = {r: [] for r in bucket_resos}\n",
+        "\n",
+        "    def closest_bucket_reso(w, h):\n",
+        "      # Tomamos la dimensión mayor para emparejar la \"resolución\" del bucket\n",
+        "      # Alternativa: usar raíz cuadrada del área; aquí elegimos max(w,h)\n",
+        "      dim = max(w, h)\n",
+        "      # Encuentra bucket con menor diferencia absoluta\n",
+        "      best = min(bucket_resos, key=lambda r: abs(r - dim))\n",
+        "      return best\n",
+        "\n",
+        "    # Poblar buckets con imágenes (respetando num_repeats)\n",
+        "    for subset in subsets:\n",
+        "      image_dir = subset.get(\"image_dir\")\n",
+        "      repeats = int(subset.get(\"num_repeats\", 1))\n",
+        "      if image_dir is None:\n",
+        "        continue\n",
+        "      p = Path(image_dir)\n",
+        "      if not p.exists():\n",
+        "        continue\n",
+        "      for image in p.iterdir():\n",
+        "        if image.suffix.lower() not in supported_types:\n",
+        "          continue\n",
+        "        try:\n",
+        "          with Image.open(image) as img:\n",
+        "            w, h = img.width, img.height\n",
+        "        except Exception:\n",
+        "          # Ignorar imágenes que no se puedan abrir\n",
+        "          continue\n",
+        "        bucket_reso = closest_bucket_reso(w, h)\n",
+        "        # Añadir la ruta repetida 'repeats' veces para contar correctamente\n",
+        "        for _ in range(repeats):\n",
+        "          buckets[bucket_reso].append(image)\n",
+        "\n",
+        "    # Calcular steps antes de acumulación: ceil(len(bucket) / train_batch_size) por cada bucket\n",
+        "    steps_before_acc = sum(math.ceil(len(images) / train_batch_size) for images in buckets.values())\n",
+        "    # Ajustar por gradient accumulation y épocas\n",
+        "    calculated_max_steps = math.ceil(steps_before_acc / gradient_accumulation_steps) * max_train_epochs\n",
+        "\n",
+        "  # Resto: calcular cycle_steps y warmup_steps y añadir a lr_scheduler_args\n",
+        "  cycle_steps = calculated_max_steps // (lr_scheduler_num_cycles or 1)\n",
+        "  print(f\"  cycle steps: {cycle_steps}\")\n",
+        "  lr_scheduler_args.append(f\"first_cycle_max_steps={cycle_steps}\")\n",
+        "\n",
+        "  warmup_steps = round(calculated_max_steps * lr_warmup_ratio) // (lr_scheduler_num_cycles or 1)\n",
+        "  if warmup_steps > 0:\n",
+        "    print(f\"  warmup steps: {warmup_steps}\")\n",
+        "    lr_scheduler_args.append(f\"warmup_steps={warmup_steps}\")\n",
+        "\n",
+        "\n",
         "def main():\n",
         "  global dependencies_installed\n",
         "\n",
@@ -711,6 +806,11 @@
         "    print()\n",
         "  else:\n",
         "    print(\"\\n🔄 Model already downloaded.\\n\")\n",
+        "\n",
+        "  if lr_scheduler_type:\n",
+        "    create_config()\n",
+        "    os.chdir(root_dir)\n",
+        "    calculate_rex_steps()\n",
         "\n",
         "  create_config()\n",
         "\n",
